fixes button spacing on safari on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -165,6 +165,9 @@
   @media not all and (min-resolution: 0.001dpcm) {
     @supports (-webkit-appearance: none) {
       margin-left: -2px;
+      @include medium {
+        margin-left: 0;
+      }
     }
   }
 }
